# g-xtb

./: README.md  pyproject.toml
example/: gxTB_tutorial.ipynb
gxtb/: __init__.py  calculator.py
parameters/: .eeq  .gxtb
